--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "mi_proyecto",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
