--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "env": {
-    "MONGO_URI": "mongodb://localhost:27017/Base_De_Datos_ACT4"  // Agrega tu variable de entorno para la conexión a MongoDB
+    "MONGO_URI": "mongodb://localhost:27017/Base_De_Datos_ACT4"
   },
   "routes": [
     {
