--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,9 @@
   "env": {
     "MONGO_URI": "mongodb+srv://luciodrakonov:w4MUSZx3WkyurOAa@cluster0.sf0l5.mongodb.net/myDatabase?retryWrites=true&w=majority&appName=Cluster0"
   },
+  "engines": {
+    "node": "22.x"
+  },
   "routes": [
     {
       "src": "/(.*)",
